@@ -1,3 +1,4 @@
+* Add get_email_valid method in ElectronicMail class
 * ElectronicEmail add template field. Default is False (if template module was installed, don't show templates)
 * ElectronicEmail order by date DESC
 * Rename Model name. Replace _ to . (dot)
